--- a/Галерея.html
+++ b/Галерея.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;" lang="ru"><head>
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="">
