--- a/Главная.html
+++ b/Главная.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;" lang="ru"><head>
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+<head>
+  <link rel="icon" href="favicon.ico"><!-- 32×32 -->
+</head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="Caring for, THE FOREST, ​Help us to look after our forests, ​Forestry
